--- a/app/index.jade
+++ b/app/index.jade
@@ -22,12 +22,14 @@ html(lang="ru-Ru")
 						//Основной контент
 						section.center-content
 							//Рабочая область
-							sectoin.workspace
-							h1.titles Генератор водяных знаков
-								//область для загрузки каринки, видима при загрузке картинки
-								div.workspase__uploud-image
-								//область для водяного знака, видима уже при его загрузке
-								div.workspase__wotermark
+							section.workspace
+								h1.titles Генератор водяных знаков
+								div.workspace-inner
+									//область для загрузки каринки, видима при загрузке картинки
+									div.workspase__uploud-image
+										//область для водяного знака, видима уже при его загрузке
+										div.workspase_wotermark-wrap
+											div.workspase__wotermark
 							//Панель управления
 							aside.controllers
 								h2.titles Настройки
@@ -53,17 +55,48 @@ html(lang="ru-Ru")
 										div.position__type-button-wrap
 										button.position__type-button.position__type-button_normal
 										button.position__type-button.position__type-button_tile
-										//Окно визаульного позиционирования. Открыто для наполнения 
-										div.position__vizual-wrap
+										//Окно визаульного позиционирования. Открыто для наполнения. то, котрое видимо
+										div.position__vizual-wrap.position__vizual-wrap_active
+											//сетка режима "нормально"
 											div.position_vizual
+												div.grid#normal
+													div.top-row
+														div.left
+														div.center
+														div.right
+													div.middle-row
+														div.left
+														div.center
+														div.right
+													div.bottm-row
+														div.left
+														div.center
+														div.right
+										//Окно визаульного позиционирования. Открыто для наполнения. то, котрое не видимо
+										div.position__vizual-wrap
+											//Сетка режима "замостить"
+											div.position_vizual
+												div.grid#tile
+													div.top-row
+														div.left
+														div.center
+														div.right
+													div.middle-row
+														div.left
+														div.center
+														div.right
+													div.bottm-row
+														div.left
+														div.center
+														div.right
 										//Кнопки управления
 										div.position__controller-wrap
 											div.position__controller_X
-												input.position__controller_X-input(type="text")
+												input.position__controller_X-input(type="number",placeholder="--")
 												a.position__controller_X-up(href="#")
 												a.position_controller_X-down(href="#")
 											div.position__controller_Y
-												input.position__controller_Y-input(type="text")
+												input.position__controller_Y-input(type="number",placeholder="--")
 												a.position__controller_Y-up(href="#")
 												a.position_controller_Y-down(href="#")
 									//Раздел с прозрачностью
@@ -71,11 +104,12 @@ html(lang="ru-Ru")
 										label.opasity__label Прозрачность
 										div.opasity__slider-wrap
 											div.opasity-slider
+												input(type="range")
 									//Раздел с кнопками
 									div.buttons
 										div.buttons-wrap
-											button(type="reset",valuae="очистить")
-											button(type="submit",valuae="скачать")
+											button(type="reset",value="очистить")
+											button(type="submit",value="скачать")
 						footer.page-footer
 							p.page-footer-copyright (с)2015, Это наш сайт, пожалуйста, не воруйте и не копируйте его
 										
