input(type="number")  => input(type="text")

--- a/app/index.jade
+++ b/app/index.jade
@@ -92,11 +92,11 @@ html(lang="ru-Ru")
 										//Кнопки управления
 										div.position__controller-wrap
 											div.position__controller_X
-												input.position__controller_X-input(type="number",placeholder="--")
+												input.position__controller_X-input(type="text",placeholder="--")
 												a.position__controller_X-up(href="#")
 												a.position_controller_X-down(href="#")
 											div.position__controller_Y
-												input.position__controller_Y-input(type="number",placeholder="--")
+												input.position__controller_Y-input(type="text",placeholder="--")
 												a.position__controller_Y-up(href="#")
 												a.position_controller_Y-down(href="#")
 									//Раздел с прозрачностью
