--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,5 +1,6 @@
 @import '_vars';
 @import '_roboto';
+@import '_buttons_sprite';
 
 @import '../bower/materialize/sass/materialize';
 
@@ -91,6 +92,7 @@ main {
     height: 672px;
     padding: 20px 0;
     background-color: #f1f1f5;
+    overflow: hidden;
 }
 
 .controllers-title {
@@ -111,13 +113,9 @@ main {
 
 .input {
     display: block;
-    height: 41px;
-    color: $txt;
-    border: 1px solid rgb(72, 203, 232);
-    border-radius: 4px;
-    outline: none;
-    background-color: #fff;
+    font-size: 12px;
 }
+
 .input-form {
     position: relative;
     margin-bottom: 20px;
@@ -143,19 +141,53 @@ input[type=tel],
 input[type=number],
 input[type=search],
 textarea.materialize-textarea {
+	font-size: 12px;
     height: 25px;
     padding-left: 5px;
-    border: 1px solid $txt;
+    border: 1px solid #9eb2c0;
     border-radius: 4px;
     &:active,
     &:focus {
         height: 25px;
         padding-left: 5px;
-        border: 1px solid $txt!important;
+        border: 1px solid #9eb2c0!important;
         border-radius: 4px;
         box-shadow: none!important;
     }
 }
+
+input::-webkit-input-placeholder {font-size: 12px;}
+input:-moz-placeholder {font-size: 12px;}
+
+.controllers-form .block {
+	border-bottom: none;
+	position: relative;
+	&:before {
+		content: '';
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 125px;
+		height: 10px;
+		border-top: 1px solid #f97e76;
+		border-right: 1px solid #f97e76;
+		transform: skew(45deg);
+	}
+	&:after {
+		content: '';
+		position: absolute;
+		bottom: 0;
+		right: 0;
+		width: 126px;
+		height: 10px;
+		border-top: 1px solid #f97e76;
+		border-left: 1px solid #f97e76;
+		transform: skew(-45deg);
+	}
+}
+
+
+
 
 .input {
     width: 100%;
@@ -165,11 +197,12 @@ textarea.materialize-textarea {
     padding: 0 5px;
     border: 1px solid #9eb2c0;
     border-radius: 4px;
+    font-size: 12px;
 }
 
 .upload-img {
     z-index: 0;
-    right: -4px;
+    right: 0;
     content: '';
     cursor: pointer;
     border-radius: 0 4px 4px 0;
@@ -198,80 +231,200 @@ textarea.materialize-textarea {
     padding-bottom: 34px;
     border-bottom: $border;
 }
-.position-row {
+.position-row:first-child {
     margin-bottom: 33px;
 }
 .position-label {
     font-size: 14px;
     font-weight: normal;
     float: left;
-    width: 48%;
+    width: 40%;
     color: #686363;
 }
 
 .position__type-button-wrap {
     float: right;
-    width: 48%;
+    width: 40%;
 }
 
 .position__type-button {
     float: right;
+    display: block;
+    border: none;
     width: 20px;
     height: 20px;
     margin-right: 5px;
-    border: 1px solid $pinc;
+    background-color: transparent;
+    @extend .sprite-b;
+    
+}
+
+.position__type-button_tile {
+	@extend .sprite-b-tile_off;
+	&-active {
+		@extend .sprite-b-tile_on;
+	}
+}
+
+.position__type-button.position__type-button_normal {
+	@extend .sprite-b-normal_off;
+	&-active {
+		@extend .sprite-b-normal_on;
+	}
 }
 
 
-
-.position__vizual-wrap {
+.position__grid-wrap {
     float: left;
     width: 48%;
 }
-.position_vizual {
-    width: 100px;
-    height: 100px;
+.grid {
+    width: 102px;
+    height: 102px;
     border: $border;
     border-radius: 4px;
+    overflow: hidden;
+    cursor: pointer;
+    .top-row,
+    .middle-row,
+    .bottom-row {
+    	height: 33.33333333333%;
+    	width: 100%;
+    	@extend .clearfix;
+    	.left, .center, .right {
+    		float: left;
+    	    height: 100%;
+    		width: 33.33333333333333%;	
+    		background-color: #dbe1e8;
+    		&:hover, &-active {
+    			background-color: #f97e76;
+    		}
+    	}
+    	.left {
+    		border-right: 1px solid #9eb2c0;
+    	}
+    	.right {
+    		border-left: 1px solid #9eb2c0;
+    	}
+    }
+    .top-row {
+    	border-bottom: 1px solid #9eb2c0;
+    }
+    .bottom-row {
+    	border-top: 1px solid #9eb2c0;
+    }
 }
-.position__vizual-wrap--hiden {
-    display: none;
-}
+
+
 
 .position__controller-wrap {
     float: right;
     width: 38%;
+    position: relative;
 }
 
-.position__controller_X,
-.position__controller_Y {
+.position__controller-wrap .position__controller_X,
+.position__controller-wrap .position__controller_Y {
     position: relative;
     display: inline-block;
     width: 100%;
+    margin-bottom: 15px;
+    &-description {
+    	font-size: 24px;
+    	color: #3b424d;
+    }
+    &-input {
+	    display: inline-block;
+	    width: 43px;
+	    height: 43px;
+	    box-sizing:border-box;
+	    margin: 0;
+	    padding: 0;
+	    border: 1px solid #9eb2c0;
+	    color: #3b424d;
+	    font-size: 24px;
+	    text-align: center;
+	    border-radius: 4px;
+	    &:active,
+	    &:focus {
+			height: 43px;
+			width: 43px;
+			padding-left: 0px;
+			border: 1px solid #3b424d;
+	    }
+    }
+    &-up, &-down {
+    	@extend .sprite-a;
+    	display: block;
+		position: absolute;
+		right:0;
+		color: #3b424d;
+		font-size: 44px;
+    }
+    &-up {
+    	top:4px;
+    	@extend .sprite-a-up;
+    	&:hover {
+			@extend .sprite-a-up_h;
+    	}
+    }
+    &-down {
+    	bottom:4px;
+    	@extend .sprite-a-down;
+    	&:hover {
+			@extend .sprite-a-down_h;
+    	}
+    }
 }
 
-.position__controller_X-input,
-.position__controller_Y-input {
-    width: 42px;
-    height: 42px;
-    border: $border;
-    border-radius: 4px;
-}
 
-.position__controller_X-up,
-.position__controller_X-down,
-.position__controller_Y-up,
-.position__controller_Y-down {
-    width: 20px;
-    height: 20px;
-    border: $border;
-}
+
+
+
+
+
+
 
 .opacity {
     margin-bottom: 13px;
     padding: 0 20px 23px;
     border-bottom: $border;
 }
+input[type="range"] {
+	border: none;
+	background-color: #dbe1e8;
+
+}
+
+input[type="range"]::-webkit-progress-value, 
+input[type="range"]::-webkit-progress-bar, {
+	background-color: #9eb2c0;
+
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  	-webkit-appearance: none;
+  	height: 22px!important;
+  	width: 22px!important;
+  	background-color: transparent!important;
+  	top:-4px;
+  	position: relative;
+  	border:none!important;
+ 	@extend .sprite-r;
+ 	@extend .sprite-r-range;
+ 	box-shadow: 0 1px 2px #333;
+ 	transition: 0s;
+ 	&:hover, &:active {
+		@extend .sprite-r-range_h;
+ 	}
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  cursor: pointer;
+  background: #9eb2c0;
+  border-radius: 3px;
+}
+
 
 .opasity__label {
     font-size: 14px;
@@ -281,24 +434,43 @@ textarea.materialize-textarea {
 }
 
 .buttons {
-    padding: 0 20px;
+    padding: 25px 20px 0;
 }
 
 .buttons-wrap {
     display: block;
 }
 .btn {
+	float: right;
     display: inline-block;
     height: 43px;
-    padding: 0 20px;
+    width: 100px;
+    padding: 0 15px;
     color: #fff;
     border-radius: 4px;
     background-color: $pinc;
+    box-shadow: none;
+    transition: 0s;
+    &:hover, &:active, &:focus {
+		background-image: -moz-linear-gradient( 90deg, rgb(249,126,118) 0%, rgb(238,121,113) 95%, rgb(227,115,108) 100%);
+		background-image: -webkit-linear-gradient( 90deg, rgb(249,126,118) 0%, rgb(238,121,113) 95%, rgb(227,115,108) 100%);
+		background-image: -ms-linear-gradient( 90deg, rgb(249,126,118) 0%, rgb(238,121,113) 95%, rgb(227,115,108) 100%);
+    	box-shadow: none;
+	}
+
 }
 
+
 .btn-res {
-    background: #c1cfd9;
+	float: left;
+    background-color: #bfcdd7;
+    &:hover, &:active, &:focus {
+    	background-image: -moz-linear-gradient( 90deg, rgb(193,207,217) 0%, rgb(176,189,198) 95%, rgb(158,170,179) 100%);
+		background-image: -webkit-linear-gradient( 90deg, rgb(193,207,217) 0%, rgb(176,189,198) 95%, rgb(158,170,179) 100%);
+		background-image: -ms-linear-gradient( 90deg, rgb(193,207,217) 0%, rgb(176,189,198) 95%, rgb(158,170,179) 100%);
+	}
 }
+
 
 footer.page-footer {
     background-color: transparent;
