--- a/app/templates/index.jade
+++ b/app/templates/index.jade
@@ -51,14 +51,14 @@ html(lang="ru-Ru")
 										div.input-form
 											div.title-label Исходное изображение
 											label.input-label(for="input-image")
-												input.input(type="text", name="image", id="input-image" placeholder="Загрузите изображение")
+												input.input(type="text", name="image", id="input-image", value="Загрузите изображение", disabled)
 												span.upload-img
 											label(for="input-upload-img")
 											input.upload-btn(type="file",name="upload-img",id="input-upload-img")
 										div.input-form
 											div.title-label Водяной знак
 											label.input-label(for="input-watermark")
-												input.input(type="text", name="watermark", id="input-watermark" placeholder="Загрузите водяной знак")
+												input.input(type="text", name="watermark", id="input-watermark" value="Загрузите водяной знак", disabled)
 												span.upload-img
 											label(for="input-upload-watermark")
 											input.upload-btn(type="file",name="upload-watermark",id="input-upload-watermark")
