--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -6,26 +6,35 @@
 
 /*Положения картинок */
 
-.workspase_wotermark-wrap {
+
+.workspace-inner {
+    width: 100%;
+    height: 100%;
     position: relative;
-    height: 533px;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;  
+    overflow: hidden;
 }
 
-.workspase__wotermark-image {
-    position: absolute;
-    display: inline-block;
-    left: 0;
-    top: 0;
+.workspase__uploud-image {
+    position: relative;
+    max-width: 100%;
+max-height: 533px;
+
     img {
         max-width: 100%;
+                max-height: 533px;
     }
 }
 
-.workspase__wotermark-watermark {
-
+.workspase_wotermark-wrap {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 5;
 }
-
-
 
 
 
@@ -416,7 +425,7 @@ input:-moz-placeholder {font-size: 12px;}
 
 
 .opacity {
-    margin-bottom: 13px;
+    margin-bottom: 33px;
     padding: 0 20px 23px;
     border-bottom: $border;
 }
@@ -464,7 +473,7 @@ input[type=range]::-webkit-slider-runnable-track {
 }
 
 .buttons {
-    padding: 25px 20px 0;
+    padding: 0 20px 0;
 }
 
 .buttons-wrap {
