--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,6 +1,7 @@
 @import '_vars';
 @import '_roboto';
 @import '_buttons_sprite';
+@import 'position';
 
 @import '../bower/materialize/sass/materialize';
 
@@ -21,11 +22,11 @@
 .workspase__uploud-image {
     position: relative;
     max-width: 100%;
-max-height: 533px;
+    max-height: 533px;
 
     img {
         max-width: 100%;
-                max-height: 533px;
+        max-height: 533px;
     }
 }
 
