--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -5,8 +5,10 @@ $medium: normal 1em 'Roboto-Medium';
 $bold: normal 1em 'Roboto-Bold';
 
 /*colors*/
+$body: #4a545d;
 $txt: rgb(104, 99, 99);
 $pinc: #f97e76;
+
 
 $border: 1px solid #f97e76;
 
