--- a/app/css/main.css
+++ b/app/css/main.css
@@ -8581,6 +8581,7 @@ html {
   background-size: cover; }
 
 body {
+  position: relative;
   font: normal 1em "Roboto-Light";
   min-width: 960px;
   height: 100%;
@@ -8662,7 +8663,8 @@ body {
   height: 43px;
   float: right;
   background-color: rgba(255, 255, 255, 0.7);
-  text-indent: -9999px; }
+  text-indent: -9999px;
+  display: none; }
 
 /*Сайдбар-конец*/
 /* прибьём футер к низу   */
@@ -8704,6 +8706,7 @@ main {
   background-color: #fff; }
 
 .controllers {
+  position: relative;
   float: right;
   box-sizing: border-box;
   width: 260px;
@@ -9062,3 +9065,26 @@ footer.page-footer {
   padding-bottom: 15px;
   text-align: center;
   color: #fff; }
+
+#ajaxloader {
+  z-index: 100000;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: rgba(228, 75, 77, 0.5) url("../img/ajax.gif") 50% 50% no-repeat;
+  left: 0;
+  top: 0; }
+
+.alert {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: #f1f1f5;
+  top: 0;
+  left: 0;
+  display: none;
+  padding: 20px;
+  font-size: 20px;
+  text-align: center; }
+  .alert .last {
+    margin-bottom: 150px; }
