--- a/app/css/main.css
+++ b/app/css/main.css
@@ -9086,5 +9086,9 @@ footer.page-footer {
   padding: 20px;
   font-size: 20px;
   text-align: center; }
-  .alert .last {
-    margin-bottom: 150px; }
+  .alert img {
+    max-width: 100%; }
+  .alert small {
+    text-align: right;
+    display: block;
+    width: 100%; }
